--- a/server/templates/userAccount.pug
+++ b/server/templates/userAccount.pug
@@ -23,4 +23,5 @@ html(lang=lang dir=dir)
       };
     
     script(src='/textbook.js')
+    script(src='/course.js')
     include ../includes/tail.html
